--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
           "arch": ["x64"]
         }
       ],
-      "icon": "icon.ico"
+      "icon": "icon.png"
     },
     "linux": {
       "target": [
