Fix app icons: move to build folder and create proper .ico for Windows

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "build": {
-    "appId": "com.videograbber.app",
+    "appId": "com.martinsack.videograbber",
     "productName": "VideoGrabber",
     "files": [
       "main.js",
@@ -32,14 +32,14 @@
       }
     ],
     "mac": {
-      "category": "public.app-category.utilities",
+      "category": "public.app-category.video",
       "target": [
         {
           "target": "dmg",
           "arch": ["universal"]
         }
       ],
-      "icon": "icon.icns",
+      "icon": "build/icon.icns",
       "hardenedRuntime": false,
       "gatekeeperAssess": false
     },
@@ -50,7 +50,7 @@
           "arch": ["x64"]
         }
       ],
-      "icon": "icon.png"
+      "icon": "build/icon.ico"
     },
     "linux": {
       "target": [
@@ -59,7 +59,7 @@
           "arch": ["x64"]
         }
       ],
-      "icon": "icon.png",
+      "icon": "build/icon.png",
       "category": "Utility"
     }
   },
