--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,14 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
+        
+      - name: Cache Electron
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/electron
+            ~/.cache/electron-builder
+          key: ${{ runner.os }}-electron-${{ hashFiles('**/package-lock.json') }}
       
       - name: Download yt-dlp binaries
         run: |
@@ -59,6 +67,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CSC_IDENTITY_AUTO_DISCOVERY: false
+          ELECTRON_BUILDER_CACHE: ~/.cache/electron-builder
+        continue-on-error: false
       
       - name: Build for Windows
         if: matrix.os == 'windows-latest'
@@ -66,12 +76,16 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CSC_IDENTITY_AUTO_DISCOVERY: false
+          ELECTRON_BUILDER_CACHE: ~/.cache/electron-builder
+        continue-on-error: false
       
       - name: Build for Linux
         if: matrix.os == 'ubuntu-latest'
         run: npm run build:linux
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ELECTRON_BUILDER_CACHE: ~/.cache/electron-builder
+        continue-on-error: false
       
       - name: List dist contents
         run: ls -la dist/ || echo "No dist folder"
