--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder --mac --win --linux",
-    "build:mac": "electron-builder --mac",
-    "build:win": "electron-builder --win",
-    "build:linux": "electron-builder --linux",
+    "build": "electron-builder --mac --win --linux -c.publish=never",
+    "build:mac": "electron-builder --mac -c.publish=never",
+    "build:win": "electron-builder --win -c.publish=never",
+    "build:linux": "electron-builder --linux -c.publish=never",
     "setup": "node -e \"console.log('Run ./setup-binaries.sh (Mac/Linux) or setup-binaries.bat (Windows) to download yt-dlp binaries')\"",
     "postinstall": "electron-builder install-app-deps"
   },
